main/default/objects/Building_Sales_Product__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Building Sales Products</relationshipLabel>
    <relationshipName>Building_Sales_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>