main/default/objects/Building_Sales_Product__c/fields/LSOCLLI__c.field-meta.xml
<CustomField>
    <fullName>LSOCLLI__c</fullName>
    <formula>Building__r.LSO_CLLI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LSOCLLI</label>
    <type>Text</type>
</CustomField>