main/default/objects/Building_Sales_Product__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Product</label>
    <referenceTo>SalesProduct__c</referenceTo>
    <relationshipLabel>Building Sales Products</relationshipLabel>
    <relationshipName>Building_Sales_Products</relationshipName>
    <type>Lookup</type>
</CustomField>