main/default/objects/Building_Sales_Product__c/fields/SPC_Product__c.field-meta.xml
<CustomField>
    <fullName>SPC_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SPC Product</label>
    <referenceTo>SPC_Product__c</referenceTo>
    <relationshipLabel>Building Sales Products</relationshipLabel>
    <relationshipName>Building_Sales_Products</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>